new proj/src/objects/GE_HQ_P_L__c.object
<CustomObject>
    <description>Master Object for maintaining all tiers of P&amp;Ls (aka Businesses).</description>
    <fields>
        <fullName>GE_HQ_Derived_Tier_1__c</fullName>
        <description>Calculates the Tier 1 P&amp;L related to this record.  Primarily intended for reporting purposes.</description>
        <formula>IF( ISBLANK( GE_HQ_Parent_P_L_Name__c ) , &quot;N/A&quot;, 

IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) ,  Name  , 

IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) ,   GE_HQ_Parent_P_L_Name__r.Name , 

IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) ,  GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.Name , 

IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) ,  GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.Name , 

IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) ,  GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.Name , 

IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) ,  GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.Name , 

IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) ,  GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.Name , 

IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) , GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.Name , 

IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) ,GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c, &quot;N/A&quot; ))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the Tier 1 P&amp;L related to this record.  Primarily intended for reporting purposes.</inlineHelpText>
        <label>Derived Tier 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Inherit_Region__c</fullName>
        <defaultValue>true</defaultValue>
        <description>indicates bubble up the search or not</description>
        <label>Inherit Region from Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this P&amp;L is currently an active and valid GE P&amp;L.</description>
        <inlineHelpText>Indicates whether this P&amp;L is currently an active and valid GE P&amp;L.</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_P_L_Hierarchy_Level__c</fullName>
        <formula>IF( ISBLANK( GE_HQ_Parent_P_L_Name__c ) , 0, IF( ISBLANK(  GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) , 1 , IF( ISBLANK(   GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) , 2 , IF( ISBLANK(  GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c )  ,  3 ,  IF( ISBLANK(  GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) , 4, IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) , 5, IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) , 6, IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) , 7, IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) , 8, IF( ISBLANK( GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__r.GE_HQ_Parent_P_L_Name__c ) , 9, 10))))))))))</formula>
        <label>P&amp;L Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_P_L_ID__c</fullName>
        <description>Globally unique ID code for this P&amp;L.</description>
        <externalId>true</externalId>
        <inlineHelpText>Globally unique ID code for this P&amp;L.</inlineHelpText>
        <label>P&amp;L ID</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Parent_P_L_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent P&amp;L for establishing hierarchy.</description>
        <inlineHelpText>Parent P&amp;L for establishing hierarchy.</inlineHelpText>
        <label>Parent P&amp;L Name</label>
        <referenceTo>GE_HQ_P_L__c</referenceTo>
        <relationshipName>P_Ls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Business Tier</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Derived_Tier_1__c</columns>
        <columns>GE_HQ_Inherit_Region__c</columns>
        <columns>GE_HQ_Is_Active__c</columns>
        <columns>GE_HQ_P_L_Hierarchy_Level__c</columns>
        <columns>GE_HQ_P_L_ID__c</columns>
        <columns>GE_HQ_Parent_P_L_Name__c</columns>
        <columns>GE_HQ_SFDC_LEGACY_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unused_IDs</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Is_Active__c</columns>
        <columns>GE_HQ_Parent_P_L_Name__c</columns>
        <columns>GE_HQ_P_L_ID__c</columns>
        <columns>GE_HQ_P_L_Hierarchy_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Is_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>P&amp;L Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GE_HQ_Infinite_Loop_Check</fullName>
        <active>true</active>
        <description>Potential infinite loop.  The calculated Hierarchy Level is higher than the known number of Business Tiers.  Confirm that the selected Parent ID is not a descendant of this record.</description>
        <errorConditionFormula>GE_HQ_P_L_Hierarchy_Level__c  = 10</errorConditionFormula>
        <errorMessage>Potential infinite loop.  The calculated Hierarchy Level is higher than the known number of Business Tiers.  Confirm that the selected Parent ID is not a descendant of this record.</errorMessage>
    </validationRules>
</CustomObject>